--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   google_fonts: ^5.1.0
   transparent_image: ^2.0.1
   flutter_riverpod: ^2.4.8
+  google_generative_ai: ^0.4.0
+  url_launcher: ^6.2.6
+  flutter_markdown: ^0.7.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
